--- a/frontend/src/css/Chats.css
+++ b/frontend/src/css/Chats.css
@@ -1,20 +1,172 @@
 
+.chatfunc{
+  width: 100vw;
+  height: 25rem;
+  background: white;
+  display: flex;
+  justify-content: space-evenly;
+}
+.chatfunc img{
+  height: 20rem;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.chatfunc h1{
+  margin-top: 3rem;
+}
+.chatfunc p{
+  margin-top: 3rem;
+  font-size: 1.2vw;
+  width:40vw;
+  font-weight: 700;
 
+}
 .linkcont{
-  position: absolute;
-  top: 30%;
-  left: 30%;
-  width: 30%;
+  height: 25rem;
+  background: rgb(244, 255, 254);
+  display: flex;
+  justify-content:space-evenly ;
+  padding-top: 0.1px;
+  
+
+}
+.linkcont a{
+  width: 20vw;
+  background: white;
+  margin-top: 2rem;
+  text-align: center;
+  font-style: none;
+  text-decoration: none;
+  height:max-content;
+  min-height: 18rem;
+  box-shadow: 2px 2px 8px rgb(236, 236, 236);
+}
+.linkcont a:hover{
+  width: 20vw;
+  background: white;
+  margin-top: 2rem;
+  text-align: center;
+  font-style: none;
+  font-size: 1.05rem;
+  text-decoration: none;
+  height:max-content;
+  min-height: 18rem;
+  box-shadow: 2px 2px 8px rgb(218, 218, 218);
 }
 
-@media screen and (max-width: 800px) {
-  .container {
-    top: 0;
-    left: 0%;
-    margin-top: 15%;
 
-    width: 99vw;
+.Cnavli{
+    font-style: none;
+    text-decoration: none;
+    color: black;
+    display: block;
+    text-align: center;
+    width: 20vw;
+    height: max-content;
+    
+    padding: 0;
+}
+.Cnavli h2{
+
+    margin: 0;
+    font-style: none;
+    text-decoration: none;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.chattcont{
+  
+}
+
+.hEekYD .input-container button{
+    position: relative;
+}
+@media screen and (max-width: 1000px) {
+  .chatfunc{
+    width: 100vw;
+    height: max-content;
+    background: white;
+    display: block;
+    padding-bottom: 2rem;
+    
+    
   }
-}
+  .chatfunc img{
+    height: 10rem;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .chatfunc h1{
+    margin-top: 2rem;
+  }
+  .chatfunc p{
+    margin-top: 3rem;
+    font-size: 1.2rem;
+    width:90%;
+  
+  }
 
+
+  .linkcont{
+    height:max-content;
+    width: 100vw;
+    background: rgb(244, 255, 254);
+    display: block;
+    padding-top: 0.1px;
+    padding-bottom: 1rem;
+    
+  
+  }
+  .linkcont a{
+    width: 90%;
+    background: white;
+    margin-top: 2rem;
+    text-align: center;
+    font-style: none;
+    text-decoration: none;
+    height: max-content;
+    box-shadow: 2px 2px 8px rgb(236, 236, 236);
+    margin-bottom: 2rem;
+  }
+  .linkcont a:hover{
+    width: 90%;
+    background: white;
+    margin-top: 2rem;
+    text-align: center;
+    font-style: none;
+    font-size: 1.05rem;
+    text-decoration: none;
+    height: max-content;
+    box-shadow: 2px 2px 8px rgb(218, 218, 218);
+  }
+  
+  
+  .Cnavli{
+      margin: auto;
+      font-style: none;
+      text-decoration: none;
+      color: black;
+      display: block;
+      text-align: center;
+      width: 90%;
+      background: white;
+      height: max-content;
+      padding: 0;
+
+  }
+  .Cnavli h2{
+  
+      margin: 0;
+      font-style: none;
+      text-decoration: none;
+      margin-top: 1rem;
+      margin-bottom: 2rem;
+  }
+
+  .Cnavli .button-53{
+    width: 80%;
+  }
+  
+}
 
