--- a/frontend/src/css/Chat.css
+++ b/frontend/src/css/Chat.css
@@ -1,19 +1,18 @@
-.container {
+.chacontainer {
   /* height: 80vh; */
-
-  width: 60%;
-  left: 30%;
-  top: 15%;
-  border: 1px solid rgb(129, 121, 121);
+  margin: auto;
+  margin-top: 3rem;
+  width: 70%;
   background-color: white;
   display: grid;
   grid-template-columns: 40% 60%;
-  border: 1px solid rgb(219, 219, 219);
+  border: 2px solid rgb(224, 224, 224);
   border-radius: 18px;
+  
 }
 
 @media screen and (max-width: 800px) {
-  .container {
+  .chacontainer {
     top: 0;
     left: 0%;
     margin-top: 15%;
