--- a/frontend/src/css/Volunteer.css
+++ b/frontend/src/css/Volunteer.css
@@ -62,7 +62,7 @@
   border: none;
 }
 .volunteer_cunt .vpending:first-child{
-  background:#00BFBA;
+  background:#0eb2d7;
   color: white;
   font-size: 1.2rem;
 }
