--- a/frontend/src/css/Search.css
+++ b/frontend/src/css/Search.css
@@ -1,14 +1,27 @@
 .searchbox {
-  position: relative;
- 
+  width: 100%;
+  
 }
 
 .searchbox ul li{
   text-align: center;
   height: min-content;
-  width: 90%;
+  width: 100%;
   align-items: center;
-  color: white;
+  color: rgb(0, 0, 0);
+  padding: 0  ;
+  box-shadow: 2px 2px 9px rgb(221, 221, 221);
+  margin: auto;
+  background: white;
+  padding-left: 2rem;
+  min-height: 7rem;
+}
+.searchbox ul{
+  padding: 0;
+}
+
+.searchbox ul li:first-child{
+  background: rgb(157, 220, 209);
 }
 .searchbox ul li .p1{
   margin-left: 4rem;
@@ -28,16 +41,16 @@
   height: 40px;
   width: 90%;
   font-weight: 100;
-  background-color: rgba(0, 0, 0, 0.1);
-  margin-left: 35px;
+  background-color: rgba(60, 172, 161, 0.1);
+  margin-left: 0;
+  font-weight: 700;
+  text-align: center;
 }
 .searchcolumn {
+  margin: auto;
   margin-top: 6rem;
-  position: absolute;
-  height: 100%;
-  width: 75%;
-  left: 20%;
-  
+  height: 100vw;
+  width: 80vw;
 
 }
 
@@ -67,9 +80,51 @@ margin-left: 10px;
 
   display: flex;
   align-items:flex-start;
- border-radius: 18px;
-
+ border-radius: none;
+  
 }
 
+@media screen and (max-width: 1000px){
+  .link{
+    color: black;
+    list-style: none;
+    width: 90%;
+    padding-left: 20px;
+   
+    padding-top: 10px;
+    padding-bottom: 10px;
+  
+  margin-left: 10px;
+  
+    display: block;
+    align-items:flex-start;
+   border-radius: none;
+    
+  }
+  .searchbox ul li{
+    text-align: center;
+    height: min-content;
+    width: 100%;
+    align-items: center;
+    color: rgb(0, 0, 0);
+    padding: 0  ;
+    box-shadow: 2px 2px 9px rgb(221, 221, 221);
+    margin: auto;
+    background: white;
+    padding-left: 2rem;
+    min-height: 7rem;
+    display: block;
+  }
 
-
+  .searchbox ul li .p2{
+    text-align: start;
+  }
+  .searchbox ul h3{
+    text-align: start;
+  }
+  .searchbox ul li .p1{
+    text-align: start;
+    margin-left: 0rem;
+    width: 90%;
+  }
+}
