--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -29,7 +29,7 @@
   margin-top: 2rem;
   width: 85vw;
   box-shadow: 2px 2px 9px rgb(225, 225, 225);
-  background-color: #EEEEFF;
+  background: rgb(246, 254, 255);
 }
 
 .contentt .userdet{
@@ -43,7 +43,7 @@
 }
 .contentt .userdet img{
   
-  height: 10rem;
+  height: 6rem;
   margin: auto;
   margin-left: 5rem;
   padding: 1rem;
@@ -61,21 +61,28 @@
   font-size: 2rem;
   font-weight: 700;
   margin-top: 1rem;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  text-align: right;
+  margin-left: 5rem;
 }
 
 #credits img{
-  height: 7rem;
+  float: right;
+  height: 3rem;
   margin: auto;
-  margin-left: 0rem;
   padding: 0rem;
   border-radius: 0%;
   box-shadow:none;
+  margin: 0;
+  margin-left: 2rem;
 }
 
 .contentt .donatedorders{
   position: relative;
   z-index: 1;
-  /* background: hsl(191, 100%, 98%); */
+  background: rgb(246, 254, 255);
   padding-top: 0.1px;
   height: max-content;
   padding-bottom: 2rem;
@@ -83,8 +90,15 @@
 }
 
 .contentt h2{
+  text-align: left;
   margin: 0rem;
   margin-top: 1rem;
+  margin-left: 5vw;
+}
+
+.titleimg{
+  float: right;
+  margin-right: 5vw;
 }
 
 .contentt ul{
@@ -164,6 +178,7 @@
 
 .contentt .requestorders{
   padding-bottom: 3rem;
+  background: rgb(246, 254, 255);
 }
 
 .contentt .requestorders img{
@@ -197,7 +212,81 @@
  
 }
 
+.subs{
+  
+   background: rgb(254, 254, 254);
+   box-shadow: 2px 2px 9px rgb(238, 238, 238);
+   width: 70vw;
+   margin: auto;
+   margin-top: 1rem;
+   margin-bottom: 1rem;
+   height: max-content;
+   min-height: 10rem;
+   border-radius: 1rem;
+  
+  
+}
+
+.subimg img{
+  margin-right: 2rem;
+  border-radius: 1rem;
+  float: right;
+  height: 10rem;
+}
+.headsub h2{
+padding-top: 2rem;
+width: 90%;
+margin: auto;
+}
+
+.subbut{
+  background: rgb(255, 102, 0);
+  border: none;
+  height: 3rem;
+  color: white;
+  border-radius: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  width: 10rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  
+}
+
+#sss{
+  margin: 0;
+}
+
+#subpix{
+    height:2rem;
+    box-shadow: none;
+    margin: 0;
+    padding: 0;
+    margin-right: 3rem;
+}
+
+.cjec{
+  display: flex;
+  
+  justify-content: space-around;
+}
 @media screen and (max-width: 1000px) {
+  .userdet #credits{
+    text-align: center;
+    align-items: center;
+    
+    width: 90vw;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 1rem;
+  }
+
+  .subimg img{
+    margin-right: 0rem;
+    border-radius: 1rem;
+    float: center;
+    height: 10rem;
+  }
   .profilediv .contentt{
     margin: auto;
     margin-top: 2rem;
@@ -229,13 +318,7 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
-  .userdet #credits{
-    width: 30vw;
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-top: 1rem;
-  }
-
+  
 
   .contentt .donatedorders{
     position: relative;
