--- a/frontend/src/css/SignUp.css
+++ b/frontend/src/css/SignUp.css
@@ -20,7 +20,7 @@
   text-align: center;
   border-radius: 2rem;
   animation-name: slide;
-  animation-duration: 2s;
+  animation-duration: 0s;
   animation-fill-mode: forwards;
   overflow: hidden;
  
@@ -32,11 +32,10 @@
   height: 27rem;
   z-index: 254;
   margin-top: 8rem;
-  animation-delay: 2s;
+  animation-delay: 0s;
   animation-name: slide2;
-  
   animation-direction: reverse;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
   overflow: hidden;
   opacity: 0;
@@ -46,9 +45,9 @@
   width:32vw;
   margin-top:2rem;
   animation-name:pAnimation;
-  animation-duration: 2.5s;
+  animation-duration: 1s;
   animation-fill-mode: forwards;
-  animation-delay: 2s;
+  animation-delay: 0s;
   visibility: hidden;
   opacity: 0;
   border-radius: 2rem;
@@ -62,7 +61,7 @@
   color: #ffffff;
   position: relative;
   padding-top: 2rem;
-  animation-duration: 3s;
+  animation-duration: 0.5s;
   animation-name:pAnimation;
   animation-fill-mode: forwards;
   visibility: hidden;
@@ -78,7 +77,7 @@
   height: 23rem;
   margin: auto;
   padding-top: 1rem;
-  animation-duration: 3s;
+  animation-duration: 1s;
   animation-name:pAnimation;
   animation-fill-mode: forwards;
   visibility: hidden;
@@ -99,7 +98,7 @@
   height: 3.5rem;
   border-radius: 1.2rem;
   border: none;
-  background-color: rgb(243, 251, 255);
+  background: rgb(243, 251, 255);
   padding-left: 2rem;
   margin-top: 0.8rem;
   width: 20vw;
@@ -123,16 +122,24 @@
 }
 
 .form2 {
+  text-decoration: none;
   background-color: #fff;
   padding-right: 5rem;
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 9rem;
   padding-left: 4rem;
-  animation-duration: 3s;
+  animation-duration: 1s;
   animation-name:pAnimation;
   animation-fill-mode: forwards;
   visibility: hidden;
   opacity: 0;
+}
+.form2 a{
+  text-decoration: none;
+  color: rgb(121, 172, 213);
+}
+.form2 a:hover{
+  box-shadow: none;
 }
 #roles{
   width: 20vw;
